--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,9 @@
 [package]
 name = "zed_toml"
 version = "0.1.4"
-edition.workspace = true
-publish.workspace = true
+edition = "2024"
+publish = false
 license = "Apache-2.0"
-
-[lints]
-workspace = true
 
 [lib]
 path = "src/toml.rs"
