--- a/extension.toml
+++ b/extension.toml
@@ -7,7 +7,7 @@ authors = [
     "Max Brunsfeld <max@zed.dev>",
     "Ammar Arif <evergreenkary@gmail.com>"
 ]
-repository = "https://github.com/zed-industries/zed"
+repository = "https://github.com/zed-extenisons/toml"
 
 [language_servers.taplo]
 name = "Taplo"
